--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <div class="profile-placeholder">
-                        <i class="fas fa-user"></i>
+                    <div class="profile-image-container">
+                        <img src="profile.jpeg" alt="Engr. Jawad Ahmed" class="profile-image">
                     </div>
                 </div>
             </div>
