--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <nav class="navbar">
                 <div class="logo">
-                    <h2>Engr. Jawad</h2>
+                    <h2>Portfolio</h2>
                 </div>
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
